--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>My Pizza Shop</h1>
-        <img src="https://picsum.photos/200/300/" alt="Pizza">
+        <img src="Media/Pizza.jpg" alt="Pizza">
     </header>
     <main>
         <h2>Our Menu</h2>
@@ -21,6 +21,7 @@
     </main>
     <footer>
         <p>Copyright 2023 My Pizza Shop</p>
+        <a href="ContactUs.html">Contact Us</a>
     </footer>
 </body>
 
